--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -45,16 +45,18 @@ services:
     depends_on:
       - db
       - queue
+    environment:
+      - DB_NAME=sender
   queue: 
     image: redis:3.2
     networks:
       - fila
   worker:
-    image: python:3.6
+    build: worker
     volumes:
       - ./worker:/worker
     working_dir: /worker
-    command: bash ./app.sh
+    command: worker.py
     networks:
       - fila
     depends_on:
